force-app/main/default/objects/WeatherReport__c/WeatherReport__c.object-meta.xml
<CustomObject>
    <label>WeatherReport</label>
    <nameField>
        <label>WeatherReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeatherReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>