force-app/main/default/objects/WeatherReport__c/fields/Cold_Weather_alert__c.field-meta.xml
<CustomField>
    <fullName>Cold_Weather_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cold_Weather_alert</label>
    <type>Checkbox</type>
</CustomField>