force-app/main/default/objects/WeatherReport__c/fields/Hot_Weather_alert__c.field-meta.xml
<CustomField>
    <fullName>Hot_Weather_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot_Weather_alert</label>
    <type>Checkbox</type>
</CustomField>