force-app/main/default/objects/WeatherReport__c/fields/mild_Weather_alert__c.field-meta.xml
<CustomField>
    <fullName>mild_Weather_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mild_Weather_alert</label>
    <type>Checkbox</type>
</CustomField>