force-app/main/default/objects/WeatherReport__c/fields/Weather_Key__c.field-meta.xml
<CustomField>
    <fullName>Weather_Key__c</fullName>
    <externalId>true</externalId>
    <label>Weather Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>