force-app/main/default/objects/WeatherReport__c/fields/Weather_Report_Title__c.field-meta.xml
<CustomField>
    <fullName>Weather_Report_Title__c</fullName>
    <description>Dynamic title</description>
    <formula>&quot;Weather Report - &quot; &amp; City_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weather Report Title</label>
    <type>Text</type>
</CustomField>